Documentacion de controlador Auth en swagger
